# cherries

./: .cspell.json  .dvcignore  .envrc  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Justfile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  versions.json  zensical.toml
.config/: .restic-ignore  cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.config/copier/mise/tasks/: lint-toml.sh
.config/release-please/: .manifest.json
.dvc/: config
.github/copier/: .copier-answers.python.yaml  mkdocs.yaml
0.0/: 404.html  index.html  objects.inv  sitemap.xml
0.0/SUMMARY/: index.html
0.0/api/SUMMARY/: index.html
0.0/api/liblaf/cherries/: index.html
0.0/api/liblaf/cherries/git/: index.html
0.0/api/liblaf/cherries/info/: index.html
0.0/api/liblaf/cherries/integration/: index.html
0.0/api/liblaf/cherries/pathutils/: index.html
0.0/api/liblaf/cherries/plugin/: index.html
0.0/api/liblaf/cherries/presets/: index.html
0.0/api/liblaf/cherries/typed/: index.html
0.0/api/liblaf/cherries/utils/: index.html
0.0/search/: search_index.json
SUMMARY/: index.html
api/SUMMARY/: index.html
api/liblaf/cherries/: index.html
api/liblaf/cherries/config/: index.html
api/liblaf/cherries/core/: index.html
api/liblaf/cherries/git/: index.html
api/liblaf/cherries/git/github/: index.html
api/liblaf/cherries/integration/: index.html
api/liblaf/cherries/integration/comet/: index.html
api/liblaf/cherries/integration/dvc/: index.html
api/liblaf/cherries/integration/git/: index.html
api/liblaf/cherries/integration/logging/: index.html
api/liblaf/cherries/meta/: index.html
api/liblaf/cherries/pathutils/: index.html
api/liblaf/cherries/plugin/: index.html
api/liblaf/cherries/presets/: index.html
api/liblaf/cherries/presets/typed/: index.html
api/liblaf/cherries/typed/: index.html
api/liblaf/cherries/utils/: index.html
assets/javascripts/: bundle.13a4f30d.min.js
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/SUMMARY/: index.html
dev/api/SUMMARY/: index.html
dev/api/liblaf/cherries/: index.html
dev/api/liblaf/cherries/git/: index.html
dev/api/liblaf/cherries/info/: index.html
dev/api/liblaf/cherries/integration/: index.html
dev/api/liblaf/cherries/path/: index.html
dev/api/liblaf/cherries/pathutils/: index.html
dev/api/liblaf/cherries/plugin/: index.html
dev/api/liblaf/cherries/presets/: index.html
dev/api/liblaf/cherries/typed/: index.html
dev/api/liblaf/cherries/utils/: index.html
dev/search/: search_index.json
docs/: README.md
docs/reference/: README.md
docs/reference/liblaf/cherries/: README.md
docs/reference/liblaf/cherries/bundle/: README.md
docs/reference/liblaf/cherries/config/: README.md
docs/reference/liblaf/cherries/core/: README.md
docs/reference/liblaf/cherries/plugins/: README.md  (+5 more)
exp/: hello-cherries.py
exp/src/: hello-cherries.py
liblaf/cherries/: __init__.pyi
liblaf/cherries/backend/: __init__.pyi
megalinter-reports/: .cspell.json  kics-results.sarif  mega-linter-report.json  megalinter-report.md  megalinter-report.sarif
megalinter-reports/copy-paste/html/: index.html  jscpd-report.json
megalinter-reports/sarif/: REPOSITORY_DEVSKIM.sarif  REPOSITORY_KICS.sarif  REPOSITORY_TRIVY_SBOM.sarif  REPOSITORY_TRIVY_SBOM.sarif.trivy-sbom.json
megalinter-reports/updated_sources/megalinter-reports/: kics-results.sarif  megalinter-report.md
megalinter-reports/updated_sources/megalinter-reports/sarif/: REPOSITORY_DEVSKIM.sarif  REPOSITORY_KICS.sarif  REPOSITORY_TRIVY_SBOM.sarif  REPOSITORY_TRIVY_SBOM.sarif.trivy-sbom.json
reference/liblaf/cherries/: index.html
reference/liblaf/cherries/config/: index.html
reference/liblaf/cherries/core/: index.html
reference/liblaf/cherries/integration/: index.html
reference/liblaf/cherries/meta/: index.html
reference/liblaf/cherries/path_utils/: index.html
reference/liblaf/cherries/paths/: index.html
reference/liblaf/cherries/pathutils/: index.html
reference/liblaf/cherries/plugins/: index.html
reference/liblaf/cherries/presets/: index.html
reference/liblaf/cherries/profiles/: index.html
reference/liblaf/cherries/typed/: index.html
reference/liblaf/cherries/typing/: index.html
reference/liblaf/cherries/utils/: index.html
scripts/: cherries-init.sh  gen-ref-pages.py
search/: search_index.json
skills/run-cherries-experiments/: SKILL.md
skills/run-cherries-experiments/agents/: openai.yaml
src/liblaf/cherries/: __init__.py  __init__.pyi  _entrypoint.py  _experiment.py  _run.py
src/liblaf/cherries/_main/: _end.py  _main.py  _start.py
src/liblaf/cherries/bundle/: __init__.pyi  _abc.py  _landmarks.py  _registry.py  _series.py
src/liblaf/cherries/config/: __init__.pyi  _asset.py  _config.py
src/liblaf/cherries/core/: __init__.py  __init__.pyi  _impl.py  _manager.py  _methods.py  _methods.pyi  _plugin.py  _plugin_manager.py  _protocol.py  _run.py  _spec.py
src/liblaf/cherries/info/: _exp_name.py  _git.py
src/liblaf/cherries/integration/: _abc.py  _backend.py  _neptune.py
src/liblaf/cherries/path/: __init__.pyi  _path.py  _special.py
src/liblaf/cherries/plugin/: __init__.pyi  _abc.py  _default.py  _dvc.py  _git.py  _logging.py  _mlflow.py  _restic.py  _run.py
src/liblaf/cherries/plugins/: __init__.py  __init__.pyi  comet.py  git.py  git_.py  local.py  logging.py
src/liblaf/cherries/profiles/: _abc.py  _debug.py  _default.py  _factory.py
src/liblaf/cherries/utils/: __init__.py  _dict.py  _git.py  _path.py  _yaml.py
tests/: test_assets.py  test_bundles.py  test_main.py  test_methods.py  test_metrics.py  test_params_others.py  test_plugin_manager.py  test_plugins.py  test_profiles.py  test_run.py
tests/bundle/: test_landmarks.py  test_series.py
tests/core/: test_manager.py  test_metrics.py  test_run.py
tests/main/: test_main.py
tests/plugins/: test_comet.py  test_git.py  test_local.py  test_logging.py
tests/profiles/: test_profiles.py
tests/utils/: test_dict.py
(+56 files in other folders)
