#:schema https://json.schemastore.org/pyproject.json
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream>=2.1.4,<3"]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = ["lazy-loader>=0.4,<0.5", "neptune>=1.13.0,<2"]
description = "Add your description here"
keywords = []
license = "MIT"
name = "liblaf-cherries"
readme = "docs/README.md"
requires-python = ">=3.12"
version = "0.0.0"

[project.urls]
"Changelog" = "https://github.com/liblaf/cherries/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/liblaf/cherries"
"Issue Tracker" = "https://github.com/liblaf/cherries/issues"
"Release Notes" = "https://github.com/liblaf/cherries/releases"
"Source Code" = "https://github.com/liblaf/cherries"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.pixi.environments]
default = { features = ["dev"] }

[tool.pixi.project]
channel-priority = "disabled"
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
liblaf-cherries = { editable = true, path = "." }

[tool.pixi.system-requirements]
cuda = "12"
libc = { family = "glibc", version = "2.40" }
linux = "6.6"
