#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-cherries"
description = "🍒 Sweet experiment tracking with Comet, DVC, and Git integration."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: System :: Logging",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=26",
  "cachebox>=5",
  "comet-ml>=3",
  "environs>=14",
  "gitpython>=3",
  "giturlparse>=0.14",
  "lazy-loader>=0.4",
  "liblaf-grapes>=9",
  "pydantic>=2",
  "pydantic-settings>=2",
  "rich>=14",
  "wrapt>=2"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/cherries/blob/main/CHANGELOG.md"
"Documentation" = "https://cherries.readthedocs.io/"
"Homepage" = "https://github.com/liblaf/cherries"
"Issue Tracker" = "https://github.com/liblaf/cherries/issues"
"Release Notes" = "https://github.com/liblaf/cherries/releases"
"Source Code" = "https://github.com/liblaf/cherries"

[dependency-groups]
dev = ["toolz-stubs>=0.4"]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = ["liblaf-mkdocs-preset>=0.3", "mkdocs>=1"]
test = ["liblaf-pytest-preset>=0.1", "pytest>=9"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/cherries/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.pyright]
extends = ".config/linters/pyrightconfig.json"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--hypothesis-show-statistics",
  "--import-mode=importlib",
  "--showlocals"
]
consider_namespace_packages = true
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.uv]
default-groups = "all"
