#:schema https://json.schemastore.org/pyproject.json
# ref: <https://packaging.python.org/en/latest/specifications/pyproject-toml/>

[project]
name = "liblaf-cherries"
description = "🍒 Sweet experiment tracking with Comet, DVC, and Git integration."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
  { name = "liblaf", email = "30631553+liblaf@users.noreply.github.com" }
]
keywords = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System",
  "Topic :: System :: Logging",
  "Topic :: Utilities",
  "Typing :: Typed"
]
dependencies = [
  "attrs>=26",
  "cachebox>=5",
  "comet-ml>=3",
  "environs>=14",
  "gitpython>=3",
  "giturlparse>=0.14",
  "lazy-loader>=0.4",
  "liblaf-grapes>=9",
  "pydantic>=2",
  "pydantic-settings>=2",
  "rich>=14",
  "wrapt>=2"
]
dynamic = ["version"]

[project.urls]
"Changelog" = "https://github.com/liblaf/cherries/blob/main/CHANGELOG.md"
"Documentation" = "https://liblaf.github.io/cherries/"
"Homepage" = "https://github.com/liblaf/cherries"
"Issue Tracker" = "https://github.com/liblaf/cherries/issues"
"Release Notes" = "https://github.com/liblaf/cherries/releases"
"Source Code" = "https://github.com/liblaf/cherries"

[dependency-groups]
build = ["check-wheel-contents>=0.6", "hatch>=1", "twine>=6"]
docs = [
  "griffe-fieldz>=0.5",
  "griffe-inherited-docstrings>=1",
  "griffe-pydantic>=1",
  "griffe-warnings-deprecated>=1",
  "mkdocstrings[python]>=1",
  "zensical>=0.0.30"
]
lint = ["import-linter[ui]>=2", "ruff>=0.15"]
nox = ["liblaf-nox-recipes>=0.1", "nox>=2026", "nox-uv>=0.7"]
test = ["pytest>=9", "pytest-cov>=7", "pytest-randomly>=4"]
typing = ["toolz-stubs>=0.4"]

[build-system]
requires = ["hatch-vcs", "hatchling"]
build-backend = "hatchling.build"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.coverage.run]
branch = true
source = ["src"]

[tool.hatch.build.hooks.vcs]
version-file = "src/liblaf/cherries/_version.py"

[tool.hatch.build.targets.sdist]
only-include = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/liblaf"]

[tool.hatch.version]
source = "vcs"

[tool.importlinter]
root_package = "liblaf.cherries"

[[tool.importlinter.contracts]]
ancestors = ["liblaf.cherries"]
name = "Acyclic siblings"
type = "acyclic_siblings"

[tool.pytest]
addopts = [
  "--doctest-modules",
  "--import-mode=importlib",
  "--junitxml=junit.xml",
  "--showlocals"
]
consider_namespace_packages = true
junit_family = "legacy"
strict = true
testpaths = ["benches", "src", "tests"]

[tool.ruff]
extend = ".config/linters/.ruff.toml"

[tool.uv]
default-groups = "all"
